// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button fixbug renders {0} , 0 and {false} 1`] = `
<button
  class="ant-btn"
  type="button"
>
  0
</button>
`;

exports[`Button fixbug renders {0} , 0 and {false} 2`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    0
  </span>
</button>
`;

exports[`Button fixbug renders {0} , 0 and {false} 3`] = `
<button
  class="ant-btn"
  type="button"
/>
`;

exports[`Button renders Chinese characters correctly 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    按 钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 2`] = `
<button
  class="ant-btn"
  type="button"
>
  <i
    aria-label="icon: search"
    class="anticon anticon-search"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#search"
      />
    </svg>
  </i>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 3`] = `
<button
  class="ant-btn"
  type="button"
>
  <i
    aria-label="icon: search"
    class="anticon anticon-search"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#search"
      />
    </svg>
  </i>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 4`] = `
<button
  class="ant-btn"
  type="button"
>
  <i
    aria-label="icon: search"
    class="anticon anticon-search"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#search"
      />
    </svg>
  </i>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 5`] = `
<button
  class="ant-btn ant-btn-loading"
  type="button"
>
  <i
    aria-label="icon: loading"
    class="anticon anticon-loading"
  >
    <svg
      aria-hidden="true"
      class="anticon-spin"
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#loading"
      />
    </svg>
  </i>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 6`] = `
<button
  class="ant-btn ant-btn-loading"
  type="button"
>
  <i
    aria-label="icon: loading"
    class="anticon anticon-loading"
  >
    <svg
      aria-hidden="true"
      class="anticon-spin"
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#loading"
      />
    </svg>
  </i>
  <span>
    按 钮
  </span>
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  class="ant-btn"
  type="button"
>
  <span>
    Follow
  </span>
</button>
`;

exports[`Button should has click wave effect 1`] = `
<button
  ant-click-animating-without-extra-node="true"
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    button
  </span>
</button>
`;

exports[`Button should not render as link button when href is undefined 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button"
>
  <span>
    button
  </span>
</button>
`;

exports[`Button should support link button 1`] = `
<a
  class="ant-btn"
  href="http://ant.design"
  target="_blank"
>
  <span>
    link button
  </span>
</a>
`;
